# apps/electron/src/renderer/src/gen/api/schemas/index.ts
@@ -17,7 +17,10 @@ export * from './calendarListResponse'
 export * from './calendarProviderType'
 export * from './calendarResponse'
 export * from './calendarSyncResponse'
+export * from './convertNoteToTaskRequest'
+export * from './convertNoteToTaskResponse'
 export * from './createCalendar'
+export * from './createNote'
 export * from './createTag'
 export * from './createTask'
 export * from './createTaskComment'
@@ -26,6 +29,8 @@ export * from './deleteApiOauthGoogleParams'
 export * from './errorResponse'
 export * from './getApiCalendarsAvailableParams'
 export * from './getApiEventsParams'
+export * from './getApiNotesIncludeArchived'
+export * from './getApiNotesParams'
 export * from './getApiOauthGoogleStatusParams'
 export * from './getApiTasksCompleted'
 export * from './getApiTasksHasActiveTimer'
@@ -36,6 +41,9 @@ export * from './getApiTasksScheduled'
 export * from './getApiTasksSortBy'
 export * from './getApiTimersParams'
 export * from './healthResponse'
+export * from './note'
+export * from './noteListResponse'
+export * from './noteResponse'
 export * from './oAuthAccount'
 export * from './oAuthAccountProviderType'
 export * from './oAuthAccountsResponse'
@@ -62,6 +70,7 @@ export * from './taskTimer'
 export * from './timerListResponse'
 export * from './timerResponse'
 export * from './updateCalendar'
+export * from './updateNote'
 export * from './updateTag'
 export * from './updateTask'
 export * from './updateTaskComment'
